crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__line_comment_single_whitespace.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(&source)
---
## Tokens
```
[
    Int 0..5,
    Comment 7..9,
    Newline 9..9,
]
```
