crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__line_continuation_at_eof_after_newline_unix_eol.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: line_continuation_at_eof_after_newline(UNIX_EOL)
---
## Tokens
```
[
    Unknown 0..2,
]
```
## Errors
```
[
    LexicalError {
        error: Eof,
        location: 0..2,
    },
]
```
