crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__line_continuation_at_eof_mac_eol.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: line_continuation_at_eof(MAC_EOL)
---
## Tokens
```
[
    Int 0..1,
    Comma 1..2,
    Unknown 2..5,
    Newline 5..5,
]
```
## Errors
```
[
    LexicalError {
        error: Eof,
        location: 2..5,
    },
]
```
